examples/tut-wrong-2.expect
---CODE---
1
---STDERR---
error: source port must be available longer than the destination port requires
    ┌─ examples/tut-wrong-2.fil:19:28
    │
 19 │     mx := new Mux[32]<G+2>(op, r0.out, m0.out);
    │                            ^^ source is available for @[G, G+1]
    │
    ┌─ ./primitives/core.fil:150:13
    │
150 │     @[G, L] sel: 1,
    │             --- destination's requirement @[G+2, G+3]

error: source port must be available longer than the destination port requires
   ┌─ examples/tut-wrong-2.fil:20:11
   │
20 │     out = mx.out;
   │     ----  ^^^^^^ source is available for @[G+2, G+3]
   │     │      
   │     destination's requirement @[G, G+1]

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
